<resources>
    <string name="app_name">Minigram</string>
    <string name="not_connected">Still not connected? SignUp Now</string>
    <string name="sign_in_txt">SIGN IN</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="signup_text">Sign-up</string>
    <string name="or_splitter">or sign-in using</string>
    <string name="facebook_sign_in_button_description">Facebook sign-in button</string>
    <string name="google_sign_in_button_description">Google sign-in button</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up_text">SIGN UP</string>
    <string name="confirm_password_text">Confirm Password</string>
    <string name="back_to_login_text">Back to Login</string>
    <string name="full_name_hint">Full Name</string>

    <string name="facebook_app_id">894335278059722</string>
    <string name="fb_login_protocol_scheme">fb894335278059722</string>
    <string name="add_image_button_description">Add Image Button</string>
    <string name="post_image_description">Post Image</string>

    <string name="post_number_of_likes">%d Likes</string>
    <string name="post_single_like">1 Like</string>

    <string name="action_logout">Logout Button</string>

    <string name="shared_prefs_file">shared_prefs</string>
    <string name="fcm_token_key">fcm_token</string>
    <string name="likes_notification_channel_id" translatable="false">fcm_likes_channel</string>
    <string name="likes_notification_channel_name" translatable="true">Likes</string>

    <string name="user_full_name">User: %s</string>
    <string name="user_total_posts">Total Posts: %d</string>
</resources>