<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data class="LoginFragmentBinding">
        <variable
            name="viewModel"
            type="com.motawfik.minigram.login.LoginViewModel"/>
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            tools:context=".MainActivity">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/not_connected"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signInBtn"
                app:layout_constraintVertical_bias="0.089" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/sign_in_txt"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.501"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/emailEditText"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="48dp"
                android:background="@drawable/rounded_corner"
                android:drawableStart="@drawable/ic_baseline_email_30"
                android:ems="10"
                android:hint="@string/email_hint"
                android:inputType="textWebEmailAddress"
                android:text="@={viewModel.email}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="48dp"
                android:background="@drawable/rounded_corner"
                android:drawableStart="@drawable/ic_baseline_lock_30"
                android:ems="10"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:text="@={viewModel.password}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/emailEditText" />

            <Button
                android:id="@+id/signInBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:enabled="@{!viewModel.loginLoading}"
                android:onClick="@{() -> viewModel.login()}"
                android:text="@string/sign_in_txt"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/passwordEditText" />

            <Button
                android:id="@+id/signUpBtb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="44dp"
                android:text="@string/signup_text"
                app:backgroundTint="@android:color/holo_green_dark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.501"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <RelativeLayout
                android:id="@+id/relativeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signUpBtb"
                app:layout_constraintVertical_bias="0.179">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="12dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginRight="12dp"
                    android:layout_marginBottom="12dp"
                    android:background="@android:color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:background="@android:color/white"
                    android:padding="2dp"
                    android:text="@string/or_splitter" />
            </RelativeLayout>

            <ImageButton
                android:id="@+id/facebookImgBtn"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_marginBottom="24dp"
                android:background="@drawable/facebook"
                android:contentDescription="@string/facebook_sign_in_button_description"
                android:scaleType="centerInside"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/googleImgBtn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
                app:srcCompat="@drawable/facebook" />

            <ImageButton
                android:id="@+id/googleImgBtn"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_marginBottom="24dp"
                android:background="@drawable/google"
                android:contentDescription="@string/google_sign_in_button_description"
                android:scaleType="centerInside"
                android:onClick="@{() -> viewModel.loginWithGoogleFlag()}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/facebookImgBtn"
                app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
                app:layout_constraintVertical_bias="0.494"
                app:srcCompat="@drawable/google" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</layout>